re PR c++/9328 (ICE with templates and namespace std members)

PR c++/9328
	* g++.dg/ext/typeof3.C: New test.

	PR c++/9328
	* error.c (dump_decl): For an OVERLOAD, just print the name of the
	function; it doesn't make sense to try to print its type.
	* semantics.c (finish_typeof): Issue errors about invalid uses.

From-SVN: r61631